--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "chai": "^3.5.0",
+    "chai-enzyme": "^0.6.1",
     "chai-immutable": "^1.6.0",
+    "cheerio": "^0.22.0",
+    "enzyme": "^2.7.1",
     "jsdom": "^9.9.1",
     "mocha": "^3.2.0",
     "react-hot-loader": "^1.3.1",
+    "sinon": "^1.17.7",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
@@ -32,12 +36,11 @@
   },
   "dependencies": {
     "immutable": "^3.8.1",
-    "react": "^15.4.2",
-    "react-addons-pure-render-mixin": "^15.4.2",
+    "react": "15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
-    "react-router": "^2.0.0",
+    "react-router": "^2.5.2",
     "redux": "^3.6.0",
     "socket.io-client": "^1.7.2"
   }
