--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "chai-enzyme": "^0.6.1",
     "chai-immutable": "^1.6.0",
     "cheerio": "^0.22.0",
+    "css-loader": "^0.26.1",
     "enzyme": "^2.7.1",
     "jsdom": "^9.9.1",
     "mocha": "^3.2.0",
+    "postcss-loader": "1.3.0",
     "react-hot-loader": "^1.3.1",
     "sinon": "^1.17.7",
+    "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
